# qst-hack-2026

./: .gitignore  Groups.md  README.md  pyproject.toml
Case 1/: Readme.md
Case 2/: Readme.md
Case 3/: Readme.md
Case 4/: README.md  Readme.md  coverage.csv
Case 4/infrastructure-optimization-main/infrastructure-optimization-main/: LICENSE  candidates.csv  pixels.csv
Case 5/: QST-Hack26-notebook.ipynb  Readme.md
Case 6/: pyproject.toml
Case 6/circuit_simulation/: circuit_generation.ipynb  circuit_generation_tests.ipynb  random_circuits.ipynb
Case 7/: README.md  Readme.md  pyproject.toml
Case 7/circuit_simulation/: Case_cirquit.ipynb  Test_mrmustard.ipynb  cirquit_generation.ipynb  pyproject.toml  random_circuits.ipynb
circuit_simulation/: Image_blurring2.py  Wigner_func.py  Wigner_function_image.ipynb  circuit_generation.ipynb  circuit_generation_tests.ipynb  data_generator.py  draw_params.py  save_data.py  test_gen..py
neural_net/: Test1.ipynb  Test2.1.ipynb  Test2.ipynb
