[project]
name = "circuit-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "cmake",
    "mrmustard[jax_backend]",
    "plotly>=5.24.1",
    "torch",
    "numpy",
    "jax",
    "tqdm",
]

[tool.uv.sources]
mrmustard = { git = "https://github.com/XanaduAI/MrMustard.git" }
